# tgbotTransferHunter

./: README.md
Taxi-Scout с наст/: main.py  pyproject.toml  replit.md
Taxi-Scout с наст/attached_assets/: Pasted--12-07-15-49-41-File-home-runner-workspace-pythonlibs-l_1765111889847.txt  Pasted-12-07-15-39-18-12-07-15-39-18-12-07-15-39-18-20-1765111_1765111187759.txt  Pasted-12-07-15-41-59-2025-12-07-12-41-59-826-src-bot-driver-b_1765111338322.txt  Pasted-12-07-15-52-03-2025-12-07-12-52-03-265-httpx-INFO-HTTP-_1765112012918.txt  Pasted-12-07-15-59-04-2025-12-07-12-59-04-194-telethon-network_1765112448863.txt  Pasted-2-2-28000--1765030233882_1765030233882.txt
Taxi-Scout с наст/data/: drivers.json  orders.json
Taxi-Scout с наст/scripts/: analyze_group.py  analyze_group_full.py  group_analysis.json  group_full_analysis.json
Taxi-Scout с наст/src/: __init__.py  config.py  matcher.py
Taxi-Scout с наст/src/auth/: __init__.py  telethon_auth.py
Taxi-Scout с наст/src/bot/: __init__.py  driver_bot.py
Taxi-Scout с наст/src/parser/: ai_parser.py  group_monitor.py  multi_user_monitor.py  order_parser.py
Taxi-Scout с наст/src/utils/: database.py  geo.py  storage.py
