[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4.1",
    "openai>=2.9.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.44",
    "telethon>=1.42.0",
    "tenacity>=9.1.2",
]
